src/test/ui/type/type-annotation-needed.stderr
error[E0283]: type annotations required: cannot resolve `_: std::convert::Into<std::string::String>`
  --> $DIR/type-annotation-needed.rs:5:5
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   | ------------------------------- required by `foo`
...
LL |     foo(42);
   |     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
